--- a/requirements.txt
+++ b/requirements.txt
@@ -52,9 +52,9 @@ kiwisolver==1.3.1
 MarkupSafe==1.1.1
 matplotlib==3.2.2
 mistune==0.8.4
-mkl-fft==1.1.0
-mkl-random==1.1.1
-mkl-service==2.3.0
+#mkl-fft==1.1.0
+#mkl-random==1.1.1
+#mkl-service==2.3.0
 ml-collections==0.1.0
 mypy-extensions==0.4.3
 nbclassic==0.2.6
@@ -66,7 +66,7 @@ notebook==6.2.0
 numpy==1.18.5
 nvidia-ml-py3==7.352.0
 olefile==0.46
-opt-einsum==0+untagged.61.gd905544.dirty
+#opt-einsum==0+untagged.61.gd905544.dirty
 packaging==20.9
 pandocfilters==1.4.2
 parso==0.8.1
@@ -97,7 +97,7 @@ regex==2020.11.13
 requests==2.25.1
 Send2Trash==1.5.0
 sentry-sdk==0.20.0
-setuptools==49.2.0.post20200714
+#setuptools==49.2.0.post20200714
 shortuuid==1.0.1
 six==1.15.0
 smmap==3.0.5
